# eible

./: .clang-format  CMakeLists.txt  CMakeLists.txt.quazip  CMakeLists.txt.zlib  QuaZipConfig.cmake  README.md  ZlibConfig.cmake  resources.qrc  sonar-project.properties  testXlsx.xlsx
examples/: CMakeLists.txt  example.cpp  example.ods  example.xlsx  examplesResources.qrc
include/eible/: ColumnType.h  ExportData.h  ExportDsv.h  ExportXlsx.h  ImportOds.h  ImportSpreadsheet.h  ImportXlsx.h  eible_global.h
res/: resources.qrc
src/: ColumnType.h  DataFormat.h  EibleUtilities.cpp  EibleUtilities.h  Export.h  ExportData.cpp  ExportData.h  ExportDsv.cpp  ExportDsv.h  ExportXlsx.cpp  ExportXlsx.h  ImportOds.cpp  ImportOds.h  ImportSpreadsheet.cpp  ImportSpreadsheet.h  ImportXlsx.cpp  ImportXlsx.h  Utilities.cpp  Utilities.h  eible_global.h
tests/: CMakeLists.txt  ExportDsvTest.cpp  ExportDsvTest.h  ExportXlsxTest.cpp  ExportXlsxTest.h  ImportCommon.cpp  ImportCommon.h  ImportOdsTest.cpp  ImportOdsTest.h  ImportXlsxTest.cpp  ImportXlsxTest.h  TestTableModel.cpp  TestTableModel.h  Tests.cpp  Utilities.cpp  Utilities.h  bigFile.ods  emptyOds.ods  mediumFile.ods  mediumFile.xlsx  testOds.ods  testResources.qrc  testXlsx.xlsx
